--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,8 +46,56 @@ body {
     margin: 0 auto;
 }
 
+/* about section */
+.about span,
+.work span {
+    margin: 10px 0px;
+    display: block;
+}
+
+.about-ttl,
+.work-ttl {
+    padding-bottom: 50px;
+}
+
+.about-list,
+.work-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 40px;
+}
+
+.about-list ul,
+.work-list ul {
+    font-size: 16px;
+    color: #030000;
+    width: calc((100% - 80px)/3);
+    padding-bottom: 85px;
+}
+
+.about-img {
+    height: 106px;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+
+.about-list-ttl {
+    margin: 20px;
+    padding-top: 30px;
+    text-align: center;
+}
+
+/* work section */
 
 
+.work-list-ttl {
+    height: 85px;
+    align-items: center;
+    padding: 20px 0px;
+    text-align: center;
+}
 
 /* Responsive */
 @media only screen and (max-width: 999px) {
