--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,7 @@ body {
     font-size: 16px;
     max-width: 1920px;
     margin: 0 auto;
+    color: #000000;
 }
 
 @font-face {
@@ -42,10 +43,67 @@ body {
 
 .container {
     max-width: 960px;
-    padding: 0 10px;
+    /* padding: 0 10px; */
     margin: 0 auto;
 }
 
+/* header section */
+header .header{
+    margin: 85px 0 32px;
+}
+header .header .logo{
+    margin-bottom: 33px;
+}
+header .header .navbar{
+    margin-right: 50px;
+}
+header .header .navbar ul{
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    gap: 82px;
+}
+.header .navbar ul li a,
+.footer .footer-nav ul li a{
+    font-size: 24px;
+}
+/* End of header section */
+
+/* Slider section */
+.slider-sec{
+    background-color: #bfbfbf;
+    padding: 30px 0;
+}
+.slider-sec .center {
+    padding: 0 40px;
+    max-width: 100%;
+}
+.slider-sec .center .slider-img {
+    text-align: center;
+    transform: scale(0.89);
+  }
+  
+  .slider-sec .center .slick-list {
+    padding: 0;
+  }
+  
+  .slider-sec .center .slider-img.slick-current {
+    transform: scale(1);
+  }
+  
+
+/* footer section */
+.footer{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 40px 0 60px;
+}
+.footer .footer-nav ul{
+    display: flex;
+    gap: 82px;
+}
+/* End of footer section */
 
 
 
@@ -53,10 +111,39 @@ body {
 @media only screen and (max-width: 999px) {
     .container {
         max-width: 100%;
-        padding: 0 20px;
+        padding: 0 10px;
         margin: 0 auto;
     }
+    .slider-sec .center .slider-img img{
+        max-width: 540px;
+    }
 
+    /* footer section */
+    .footer .footer-nav ul{
+        display: flex;
+        gap: 42px;
+    }
+    /* End of footer section */
+}
+@media only screen and (max-width: 860px) {
+     /* footer section */
+     .footer .footer-nav ul{
+        display: flex;
+        gap: 30px;
+    }
+    /* End of footer section */
+}
+@media only screen and (max-width: 830px) {
+    .slider-sec .center .slider-img img{
+        max-width: 470px;
+    }
+
+      /* footer section */
+     .footer .footer-nav ul{
+        display: flex;
+        gap: 26px;
+    }
+    /* End of footer section */
 
 }
 
@@ -64,11 +151,260 @@ body {
 @media only screen and (max-width: 768px) {
     .container {
         max-width: 100%;
-        padding: 0 20px;
+        padding: 0 10px;
         margin: 0 auto;
     }
+
+    /* header section */
+    header .header{
+        margin: 25px 0 20px;
+        display: flex;
+    }
+    header .header .logo{
+        margin-bottom: 33px;
+    }
+    header .header .navbar ul{
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        margin: 178px auto 0;
+        display: block;
+        background-color: #fff59a;
+        z-index: 20;
+        width: 100%;
+        padding: 20px 10% 0;
+        height: 100vh;
+        opacity: 0;
+        transition: all .6s;
+    }
+    header .header .navbar ul li{
+        display: block;
+        padding: 10px;
+        text-align: left;
+        border-bottom: 1px solid #feca01;
+    }
+    .header .navbar ul li a,
+    .footer .footer-nav ul li a{
+        font-size: 24px;
+    }
+    .header .navbar ul li a{
+        color: #ffc800;
+    }
+
+    .header .menu-toggle {
+        width: 50px;
+        height: 50px;
+        display: inline-block;
+        position: fixed;
+        top: 30px;
+        right: 4%;
+        border-radius: 50%;
+        transition: all .4s;
+        background-color: #fff59a;
+        padding: 10px 10px 7px;
+        z-index: 2;
+        cursor: pointer;
+    }
+
+    .header .menu-toggle span {
+        display: inline-block;
+        position: absolute;
+        left: 13px;
+        width: 26px;
+        height: 2px;
+        background-color: #7a7a7a;
+        transition: all .4s;
+        border-radius: 5px;
+    }
+
+    .header .menu-toggle span:nth-of-type(1) {
+        top: 16px;
+    }
+
+    .header .menu-toggle span:nth-of-type(2) {
+        top: 24px;
+    }
+
+    .header .menu-toggle span:nth-of-type(3) {
+        top: 32px;
+    }
+
+    .header .menu-toggle.active span:nth-of-type(1) {
+        transform: translateY(8px) rotate(-45deg);
+    }
+
+    .header .menu-toggle.active span:nth-of-type(2) {
+        opacity: 0;
+    }
+
+    .header .menu-toggle.active span:nth-of-type(3) {
+        transform: translateY(-8px) rotate(45deg);
+    }
+
+    .header .navbar.is-show ul{
+        opacity: 1;
+        transition: all .6s;
+
+    }
+    /* End of header section */
+
+    /* slider section */
+    .slider-sec{
+        background-color: #bfbfbf;
+        padding: 28px 0;
+    }
+    .slider-sec .center {
+        padding: 0 30px;
+        max-width: 100%;
+    }
+    .slider-sec .center .slider-img img{
+        max-width: 400px;
+    }
+    /* End of slider section */
+
+    /* footer section */
+    .footer{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+        padding: 40px 0 50px;
+    }
+    .footer .footer-nav ul{
+        display: flex;
+        gap: 42px;
+    }
+    /* End of footer section */
+    
 
 
 }
 
-@media screen and (max-width:640px) {}
+@media screen and (max-width:640px) {
+
+    /* header */
+    header .header {
+        margin: 0;
+    }
+    header .header .logo {
+        margin-bottom: 0;
+    }
+    .header .logo img{
+        width: 170px;
+    }
+    .header .menu-toggle {
+        top: 10px;
+        right: 4%;
+    }
+    header .header .navbar ul{
+        margin: 100px auto 0;
+    }
+    header .header .navbar ul{
+        margin: 68px auto 0;
+    }
+    /* End of header section */
+
+    /* slider section */
+    .slider-sec{
+        background-color: #bfbfbf;
+        padding: 20px 0;
+    }
+    .slider-sec .center {
+        padding: 0 20px;
+        max-width: 100%;
+    }
+    .slider-sec .center .slider-img{
+        transform: scale(0.8);
+    }
+    .slider-sec .center .slider-img img{
+        max-width: 370px;
+    }
+    /* End of slider section */
+
+    /* footer section */
+    .footer{
+        gap: 20px;
+        padding: 40px 0 50px;
+    }
+    .footer .footer-nav ul{
+        display: flex;
+        gap: 42px;
+    }
+    .footer .footer-nav ul li a{
+        font-size: 18px;
+    }
+    .footer .copyright{
+        font-size: 12px;
+    }
+    /* End of footer section */
+}
+@media screen and (max-width:590px) {
+ /* slider */
+    .slider-sec .center .slider-img img{
+        max-width: 320px;
+}
+}
+@media screen and (max-width:530px) {
+    /* slider */
+    .slider-sec .center .slider-img img{
+       max-width: 280px;
+   }
+   .slider-sec .center {
+    padding: 0 15px;
+    max-width: 100%;
+}
+}
+@media screen and (max-width:460px) {
+    /* slider */
+    .slider-sec .center .slider-img img{
+       max-width: 240px;
+   }
+
+   .footer .footer-nav ul li a{
+    font-size: 16px !important;
+}
+}
+@media screen and (max-width:430px) {
+    /* slider */
+    .slider-sec .center .slider-img img{
+        max-width: 210px;
+    }
+    /* footer section */
+    .footer .footer-nav ul{
+        display: flex;
+        gap: 22px;
+    }
+    /* End of footer section */
+}
+@media screen and (max-width:380px) {
+     /* slider */
+     .slider-sec .center .slider-img img{
+        max-width: 190px;
+    }
+    /* footer section */
+    .footer .footer-nav ul{
+        display: flex;
+        gap: 16px;
+    }
+    .footer .footer-nav ul li a{
+        font-size: 14px !important;
+    }
+    .footer .copyright{
+        font-size: 10px;
+    }
+    /* End of footer section */
+}
+@media screen and (max-width:350px) {
+    /* slider */
+    .slider-sec .center .slider-img img{
+       max-width: 170px;
+   }
+}
+@media screen and (max-width:320px) {
+    /* slider */
+    .slider-sec .center .slider-img img{
+       max-width: 150px;
+   }
+}
