--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,6 +47,9 @@ body {
 }
 
 /* about section */
+.about{
+    padding-bottom:170px;
+}
 .about span,
 .work span {
     margin: 10px 0px;
@@ -55,6 +58,9 @@ body {
 
 .about-ttl,
 .work-ttl {
+    display:flex;
+   flex-direction: column;
+   align-items: end;
     padding-bottom: 50px;
 }
 
@@ -69,9 +75,10 @@ body {
 .about-list ul,
 .work-list ul {
     font-size: 16px;
+    line-height: 20px;
     color: #030000;
     width: calc((100% - 80px)/3);
-    padding-bottom: 85px;
+   
 }
 
 .about-img {
@@ -116,7 +123,47 @@ body {
         margin: 0 auto;
     }
 
+/* about & work section */
+    .about-list ul,
+    .work-list ul {
+        width: calc((100% - 50px)/2);
+        }
 
+    .about-list,
+    .work-list {
+   gap: 50px;
+    }
+    .about{
+        padding-bottom:50px;
+    }
+    
 }
 
-@media screen and (max-width:640px) {}
+@media screen and (max-width:640px) {
+/* about & work section */
+    .about-list ul,
+    .work-list ul {
+        width:100%;
+        }
+
+       .about-list-txt, .work-list-ttl{
+        padding: 0px 20px;
+       } 
+
+       .work-list-img {
+        height: 148px;
+        align-items: center;
+        display: flex;
+        justify-content: center;
+    }
+    .work-list-ttl {
+        height: 50px;
+        display: flex;
+        align-items: start;
+        padding: 20px 0px;
+        text-align: center;
+    }
+    .about{
+        padding-bottom:30px;
+    }
+}
