--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,14 +43,15 @@ body {
 
 .container {
     max-width: 960px;
-    /* padding: 0 10px; */
+    padding: 0 10px;
     margin: 0 auto;
 }
 
 /* about section */
-.about{
-    padding-bottom:170px;
+.about {
+    padding-bottom: 170px;
 }
+
 .about span,
 .work span {
     margin: 10px 0px;
@@ -59,9 +60,9 @@ body {
 
 .about-ttl,
 .work-ttl {
-    display:flex;
-   flex-direction: column;
-   align-items: end;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
     padding-bottom: 50px;
 }
 
@@ -79,7 +80,7 @@ body {
     line-height: 20px;
     color: #030000;
     width: calc((100% - 80px)/3);
-   
+
 }
 
 .about-img {
@@ -139,6 +140,9 @@ header .header .navbar ul {
     text-align: center;
     transform: scale(0.89);
 }
+.slider-sec .center .slider-img img{
+    width: 100%;
+}
 
 .slider-sec .center .slick-list {
     padding: 0;
@@ -146,15 +150,25 @@ header .header .navbar ul {
 
 .slider-sec .center .slider-img.slick-current {
     transform: scale(1);
+    margin: 0 10px;
 }
 
 
 /* footer section */
+footer .scroll-top{
+    position: fixed;
+    right: 45px;
+    bottom: 129px;
+    z-index: 30;
+}
 .footer {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 40px 0 60px;
+    padding: 250px 0 60px;
+}
+footer .container{
+    padding: 0;
 }
 
 .footer .footer-nav ul {
@@ -200,7 +214,7 @@ header .header .navbar ul {
         margin: 0 auto;
     }
 
-    .slider-sec .center .slider-img img {
+    .slider-sec .center .slider-img {
         max-width: 540px;
     }
 
@@ -225,7 +239,7 @@ header .header .navbar ul {
 }
 
 @media only screen and (max-width: 830px) {
-    .slider-sec .center .slider-img img {
+    .slider-sec .center .slider-img {
         max-width: 470px;
     }
 
@@ -247,17 +261,24 @@ header .header .navbar ul {
         margin: 0 auto;
     }
 
-/* about & work section */
+    /* about & work section */
     .about-list ul,
     .work-list ul {
         width: calc((100% - 50px)/2);
-        }
+    }
 
-<<<<<<< HEAD
     /* header section */
     header .header {
-        margin: 25px 0 20px;
+        /* margin: 25px 0 20px; */
+        margin: 0;
         display: flex;
+        position: fixed;
+        width: 100%;
+        background-color: #FFFFFF;
+        z-index: 30;
+        top: 0;
+        left: 0;
+        padding-left: 3%;
     }
 
     header .header .logo {
@@ -269,7 +290,7 @@ header .header .navbar ul {
         top: 0;
         left: 0;
         right: 0;
-        margin: 178px auto 0;
+        margin: 133px auto 0;
         display: block;
         background-color: #fff59a;
         z-index: 20;
@@ -358,27 +379,43 @@ header .header .navbar ul {
     .slider-sec {
         background-color: #bfbfbf;
         padding: 28px 0;
+        margin-top: 133px;
     }
 
     .slider-sec .center {
         padding: 0 30px;
-        max-width: 100%;
+        width: 100%;
+        margin: 0 auto;
     }
 
-    .slider-sec .center .slider-img img {
-        max-width: 400px;
+    .slider-sec .center .slider-img {
+        text-align: center;
+        transform: scale(1);
+        max-width: 600px;
+        margin: 0 26px;
     }
+
+    .slider-sec .center .slick-list {
+        padding: 0;
+    }
+
 
     /* End of slider section */
 
     /* footer section */
+    footer .scroll-top{
+        right: 15px;
+    }
+    footer .scroll-top img{
+        width: 80%;
+    }
     .footer {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         gap: 20px;
-        padding: 40px 0 50px;
+        padding: 170px 0 50px;
     }
 
     .footer .footer-nav ul {
@@ -389,12 +426,33 @@ header .header .navbar ul {
     /* End of footer section */
 
 }
+@media screen and (max-width:700px) {
+    .slider-sec .center {
+        padding: 0 30px;
+        width: 90%;
+        margin: 0 auto;
+    }
+
+    .slider-sec .center .slider-img {
+        text-align: center;
+        transform: scale(1);
+        max-width: 450px;
+        margin: 0 33px;
+    }
+}
 
 @media screen and (max-width:640px) {
 
     /* header */
     header .header {
         margin: 0;
+        position: fixed;
+        width: 100%;
+        background-color: #FFFFFF;
+        z-index: 30;
+        top: 0;
+        left: 0;
+        padding-left: 4%;
     }
 
     header .header .logo {
@@ -424,6 +482,7 @@ header .header .navbar ul {
     .slider-sec {
         background-color: #bfbfbf;
         padding: 20px 0;
+        margin-top: 69px;
     }
 
     .slider-sec .center {
@@ -432,11 +491,7 @@ header .header .navbar ul {
     }
 
     .slider-sec .center .slider-img {
-        transform: scale(0.8);
-    }
-
-    .slider-sec .center .slider-img img {
-        max-width: 370px;
+        transform: scale(1);
     }
 
     /* End of slider section */
@@ -446,11 +501,47 @@ header .header .navbar ul {
         flex-direction: column;
     }
 
+    /* about & work section */
+    .about-list ul,
+    .work-list ul {
+        width: 100%;
+    }
+
+    .about-list-txt,
+    .work-list-ttl {
+        padding: 0px 20px;
+    }
+
+    .work-list-img {
+        height: 148px;
+        align-items: center;
+        display: flex;
+        justify-content: center;
+    }
+
+    .work-list-ttl {
+        height: 50px;
+        display: flex;
+        align-items: start;
+        padding: 20px 0px;
+        text-align: center;
+    }
+
+    .about {
+        padding-bottom: 30px;
+    }
+
 
     /* footer section */
+    footer .scroll-top{
+        right: 8px;
+    }
+    footer .scroll-top img{
+        width: 70%;
+    }
     .footer {
         gap: 20px;
-        padding: 40px 0 50px;
+        padding: 150px 0 50px;
     }
 
     .footer .footer-nav ul {
@@ -472,29 +563,32 @@ header .header .navbar ul {
 @media screen and (max-width:590px) {
 
     /* slider */
-    .slider-sec .center .slider-img img {
-        max-width: 320px;
+    .slider-sec .center .slider-img {
+        max-width: 380px;
     }
 }
 
 @media screen and (max-width:530px) {
 
     /* slider */
-    .slider-sec .center .slider-img img {
-        max-width: 280px;
+    .slider-sec .center .slider-img{
+        max-width: 400px;
     }
 
-    .slider-sec .center {
-        padding: 0 15px;
-        max-width: 100%;
+}
+@media screen and (max-width:530px) {
+
+    /* slider */
+    .slider-sec .center .slider-img{
+        max-width: 320px;
     }
 }
 
 @media screen and (max-width:460px) {
 
     /* slider */
-    .slider-sec .center .slider-img img {
-        max-width: 240px;
+    .slider-sec .center .slider-img{
+        max-width: 300px;
     }
 
     .footer .footer-nav ul li a {
@@ -505,8 +599,8 @@ header .header .navbar ul {
 @media screen and (max-width:430px) {
 
     /* slider */
-    .slider-sec .center .slider-img img {
-        max-width: 210px;
+    .slider-sec .center .slider-img {
+        max-width: 270px;
     }
 
     /* footer section */
@@ -522,7 +616,7 @@ header .header .navbar ul {
 
     /* slider */
     .slider-sec .center .slider-img img {
-        max-width: 190px;
+        max-width: 220px;
     }
 
     /* footer section */
@@ -545,53 +639,25 @@ header .header .navbar ul {
 @media screen and (max-width:350px) {
 
     /* slider */
-    .slider-sec .center .slider-img img {
-        max-width: 170px;
+    .slider-sec .center {
+        width: 100%;
+    }
+    .slider-sec .center .slider-img.slider-img.slick-current{
+        max-width: 300px;
+        
     }
 }
 
 @media screen and (max-width:320px) {
 
-    /* slider */
-    .slider-sec .center .slider-img img {
-        max-width: 150px;
-=======
+
     .about-list,
     .work-list {
-   gap: 50px;
+        gap: 50px;
     }
-    .about{
-        padding-bottom:50px;
-    }
-    
-}
 
-@media screen and (max-width:640px) {
-/* about & work section */
-    .about-list ul,
-    .work-list ul {
-        width:100%;
-        }
+    .about {
+        padding-bottom: 50px;
+    }
 
-       .about-list-txt, .work-list-ttl{
-        padding: 0px 20px;
-       } 
-
-       .work-list-img {
-        height: 148px;
-        align-items: center;
-        display: flex;
-        justify-content: center;
-    }
-    .work-list-ttl {
-        height: 50px;
-        display: flex;
-        align-items: start;
-        padding: 20px 0px;
-        text-align: center;
-    }
-    .about{
-        padding-bottom:30px;
->>>>>>> zzhk/worksection
-    }
 }
