--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -165,6 +165,10 @@ header .header .navbar ul {
 /* End of footer section */
 
 /* Service Section */
+.service-container{
+    padding: 0 20px;
+}
+
 .service_details {
     display: flex;
     justify-content: space-between;
@@ -182,6 +186,8 @@ header .header .navbar ul {
 .service_details div>p {
     line-height: 25px;
 }
+
+
 
 
 
@@ -253,7 +259,6 @@ header .header .navbar ul {
         width: calc((100% - 50px)/2);
         }
 
-<<<<<<< HEAD
     /* header section */
     header .header {
         margin: 25px 0 20px;
@@ -555,43 +560,5 @@ header .header .navbar ul {
     /* slider */
     .slider-sec .center .slider-img img {
         max-width: 150px;
-=======
-    .about-list,
-    .work-list {
-   gap: 50px;
-    }
-    .about{
-        padding-bottom:50px;
-    }
-    
-}
-
-@media screen and (max-width:640px) {
-/* about & work section */
-    .about-list ul,
-    .work-list ul {
-        width:100%;
-        }
-
-       .about-list-txt, .work-list-ttl{
-        padding: 0px 20px;
-       } 
-
-       .work-list-img {
-        height: 148px;
-        align-items: center;
-        display: flex;
-        justify-content: center;
-    }
-    .work-list-ttl {
-        height: 50px;
-        display: flex;
-        align-items: start;
-        padding: 20px 0px;
-        text-align: center;
-    }
-    .about{
-        padding-bottom:30px;
->>>>>>> zzhk/worksection
     }
 }
