--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,7 +120,7 @@ header .header .navbar ul {
 
 .header .navbar ul li a,
 .footer .footer-nav ul li a {
-    font-size: 24px;
+    font-size: 18px;
 }
 
 /* End of header section */
@@ -150,7 +150,7 @@ header .header .navbar ul {
 
 .slider-sec .center .slider-img.slick-current {
     transform: scale(1);
-    margin: 0 10px;
+    margin: 0;
 }
 
 
@@ -174,6 +174,9 @@ footer .container{
 .footer .footer-nav ul {
     display: flex;
     gap: 82px;
+}
+.footer .copyright{
+    font-size: 14px;
 }
 
 /* End of footer section */
@@ -291,7 +294,7 @@ footer .container{
     }
 
     header .header .logo {
-        margin-bottom: 33px;
+        margin-bottom: 0;
     }
 
     header .header .navbar ul {
@@ -299,7 +302,7 @@ footer .container{
         top: 0;
         left: 0;
         right: 0;
-        margin: 133px auto 0;
+        margin: 100px auto 0;
         display: block;
         background-color: #fff59a;
         z-index: 20;
@@ -317,10 +320,6 @@ footer .container{
         border-bottom: 1px solid #feca01;
     }
 
-    .header .navbar ul li a,
-    .footer .footer-nav ul li a {
-        font-size: 24px;
-    }
 
     .header .navbar ul li a {
         color: #ffc800;
@@ -388,7 +387,7 @@ footer .container{
     .slider-sec {
         background-color: #bfbfbf;
         padding: 28px 0;
-        margin-top: 133px;
+        margin-top: 100px;
     }
 
     .slider-sec .center {
@@ -402,6 +401,10 @@ footer .container{
         transform: scale(1);
         max-width: 600px;
         margin: 0 26px;
+    }
+    .slider-sec .center .slider-img.slick-current {
+        transform: scale(1);
+        margin: 0 10px;
     }
 
     .slider-sec .center .slick-list {
