--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -211,7 +211,7 @@ footer .scroll-top{
     position: fixed;
     right: 45px;
     bottom: 129px;
-    z-index: 30;
+    z-index: 20;
 }
 .footer {
     display: flex;
@@ -367,7 +367,7 @@ footer .container{
         margin: 100px auto 0;
         display: block;
         background-color: #fff59a;
-        z-index: 20;
+        z-index: 999;
         width: 100%;
         padding: 20px 10% 0;
         height: 100vh;
@@ -380,6 +380,10 @@ footer .container{
         padding: 10px;
         text-align: left;
         border-bottom: 1px solid #feca01;
+    }
+    .header .navbar ul li:hover{
+        border-bottom: 1px solid #feca01;
+        transition: all .3s;
     }
 
 
