--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -218,7 +218,10 @@ footer .scroll-top {
     position: fixed;
     right: 45px;
     bottom: 129px;
-    z-index: 200;
+    /* z-index: 200; */
+}
+.for-z{
+    z-index: 30;
 }
 
 .footer {
@@ -363,7 +366,6 @@ footer .container {
 
     /* header section */
     header .header {
-        /* margin: 25px 0 20px; */
         margin: 0;
         display: flex;
         position: fixed;
@@ -372,10 +374,20 @@ footer .container {
         z-index: 30;
         top: 0;
         left: 0;
+        transform: translateY(0);
+        transition: .5s;
         padding-left: 2%;
         box-shadow: 0px 9px 10px -15px #111;
     }
 
+    header .header {
+        -webkit-transform: translateY(0);
+                transform: translateY(0);
+    }
+    header .header.hide {
+        -webkit-transform: translateY(-100%);
+                transform: translateY(-100%);
+    }
     header .header .logo {
         margin-bottom: 0;
     }
